# mingw-w64

./: .gitattributes  .gitignore  Makefile.in  aclocal.m4  configure
.github/workflows/: main.yml
mingw-w64-crt/: aclocal.m4  configure
mingw-w64-headers/: Makefile.in  configure
mingw-w64-libraries/libmangle/: Makefile.in  configure
mingw-w64-libraries/pseh/: Makefile.in  aclocal.m4  configure
mingw-w64-libraries/winpthreads/: .gitignore  Makefile.am  Makefile.in  configure  configure.ac
mingw-w64-libraries/winpthreads/include/: pthread.h
mingw-w64-libraries/winpthreads/src/: barrier.c  barrier.h  clock.c  cond.c  cond.h  misc.c  misc.h  mutex.c  nanosleep.c  rwlock.c  sem.c  spinlock.c  thread.c  thread.h  version.rc
mingw-w64-libraries/winpthreads/tests/: Makefile.am  Makefile.in  t_clock_getres.c  t_clock_gettime.c  t_clock_nanosleep.c  t_clock_settime.c  t_nanosleep.c  test.c
mingw-w64-libraries/winpthreads/tests_pthread/: .gitignore  ChangeLog.2010  GNUmakefile  SIZES.GC  barrier1.c  barrier2.c  barrier3.c  barrier4.c  barrier5.c  barrier6.c  benchlib.c  benchtest.h  benchtest1.c  benchtest2.c  benchtest3.c  benchtest4.c  benchtest5.c  cancel1.c  cancel2.c  cancel3.c  cancel4.c  cancel5.c  cancel6a.c  cancel6d.c  cancel7.c  cancel8.c  cancel9.c  cleanup0.c  cleanup1.c  cleanup2.c  cleanup3.c  condvar1.c  condvar1_1.c  condvar1_2.c  condvar2.c  condvar2_1.c  condvar3.c  condvar3_1.c  condvar3_2.c  condvar3_3.c  (+101 more)
mingw-w64-tools/gendef/: Makefile.in  configure
mingw-w64-tools/genidl/: Makefile.in  configure
src/: thread.c
(+1 files in other folders)
